# digitnum-segment

./: .gitignore  README.md  mnist_on_cifar_segmentation.py  mnist_on_cifar_unet.pth  pyproject.toml
