[project]
name = "digitnum-segment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "albumentations>=2.0.8",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "pytorch-lightning>=2.5.2",
    "segmentation-models-pytorch>=0.5.0",
    "wandb>=0.21.0",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
